fix: status order on mobile for delegate monitor (#530)

--- a/resources/css/_general.css
+++ b/resources/css/_general.css
@@ -492,7 +492,7 @@ body {
     @apply hidden;
 }
 
-.round-status-history > span:first-child {
+.round-status-history > span:last-child {
     @apply block;
 }
 
